Add Junit 5, mockito, assertJ dependencies to Core Pom.xml